Name:                show-time
Version:             0.1
Stability:           Experimental
Build-type:          Simple
Cabal-version:       >= 1.10

Executable show-time
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010

  Build-depends:
    base                       >= 4     && < 5,
    bytestring                 == 0.9.2.1,
    unix-time                  == 0.1.2

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded
                 -Wall
                 -fwarn-tabs
                 -funbox-strict-fields
                 -O2
                 -fno-warn-unused-do-bind
                 -Werror


  default-extensions: OverloadedStrings,
                      ScopedTypeVariables
